# lark-CLI-Agent-ACP-bridge

./: .gitignore  CLAUDE.md  README.md  agents.json.example  config.toml.example  pyproject.toml
.claude/: settings.json  settings.local.json
src/lark_acp_bridge/: __init__.py
src/lark_acp_bridge/acp/: __init__.py  agent_manager.py  client.py  codex_bridge.py
src/lark_acp_bridge/bot/: __init__.py  feishu_bot.py  group.py
src/lark_acp_bridge/card/: __init__.py  renderer.py  templates.py
src/lark_acp_bridge/cli/: __init__.py  main.py
src/lark_acp_bridge/config/: __init__.py  session_store.py  settings.py  workspace_store.py
src/lark_acp_bridge/daemon/: __init__.py  base.py  factory.py  launchd.py  schtasks.py  systemd.py
src/lark_acp_bridge/media/: attachment.py
tests/: __init__.py  test_codex_bridge.py  test_feishu_bot.py
