 [project]
 name = "lark-acp-bridge"
 version = "0.1.0"
 description = "Bridge Feishu/Lark messenger with ACP-compatible coding agents"
 requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.10.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "structlog>=24.1",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "lark-oapi>=1.0",
    "aiohttp>=3.9",
]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
     "ruff>=0.5",
 ]
 
[project.scripts]
lark-acp-bridge = "lark_acp_bridge.cli.main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/lark_acp_bridge"]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
 
 [tool.ruff]
 target-version = "py311"
 line-length = 100
